objects/Requested_Day__c.object
<CustomObject><fields>
        <fullName>Do_not_include_in_Pay_Cycle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is to be used in exception situations like employee termination payout to avoid sending an approved requested day record to the payroll system.</description>
        <label>Do not include in Pay Cycle</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Employee_Number__c</fullName>
        <label>Employee Number</label>
        <length>20</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Hours__c</fullName>
        <label>Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Month_of_Request__c</fullName>
        <formula>CASE( MONTH(Requested_Day__c),  1, "01-January", 2, "02-February", 3, "03-March", 4, "04-April", 5, "05-May", 6, "06-June", 7, "07-July", 8, "08-August", 9, "09-September", 10, "10-October", 11, "11-November", 12, "12-December", "Unknown")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month of Request</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Pay_Cycle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pay Cycle</label>
        <referenceTo>Pay_Cycle__c</referenceTo>
        <relationshipName>Time_Off_Request_Payroll_Transactions</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Requested_Day__c</fullName>
        <label>Requested Day</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Time_Off_Request__c</fullName>
        <label>Time-Off Request</label>
        <referenceTo>Time_Off_Request__c</referenceTo>
        <relationshipName>Time_Off_Request_Payroll_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><customHelp>TOM_User_Guide</customHelp><deploymentStatus>Deployed</deploymentStatus><description>TOM: A specific day requested for time-off, to be processed by the payroll system in a specific pay cycle</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Requested Day</label><nameField>
        <displayFormat>TORD-{000000}</displayFormat>
        <label>Request ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Requested Days</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>